--- a/style.css
+++ b/style.css
@@ -4,34 +4,61 @@ body {
 
 .microsite {
   height: 100%;
+  margin-left: 50%;
+  margin-right: 10%;
+  min-width: 8cm;
+  max-width: 18cm;
 
-  margin-left: 47rem;
-
-  background-image: url("cover.jpg");
+  background-color: rgb(44, 44, 44);
+  background-image: url("cover_upraveno.jpg");
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: right 20%;
+  background-position: center 20%;
 }
 
 .header {
-  display: flex;
   font-size: 2.2rem;
 
-  color: hsl(16.22, 65%, 20%);
+  color: hsl(16.22, 65%, 40%);
   font-family: "Montserrat", sans-serif;
   text-shadow: 5px 5px 15px black;
 }
 
-.main {
-  margin-right: 12rem;
+h1 {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
 
+.main {
+  margin-right: 8%;
   font-family: "Montserrat", sans-serif;
   font-size: 1.2rem;
   font-weight: 700;
+  text-align: justify;
+}
+
+.main-background {
+  padding: 1%;
+  background-color: hsla(16.22, 80%, 80%, 0.2);
+  box-shadow: 0px 0px 10px 10px hsla(16.22, 80%, 80%, 0.2);
+  border-radius: 3rem;
+}
+
+p {
+  margin-left: 1rem;
+}
+
+/*p{
+	margin-top:9.6px;
+	margin-bottom:9.6px;}
+*/
+.last-par {
+  margin-bottom: 0.1vh;
 }
 
 .footer {
-  margin-top: 0.2rem;
-  margin-right: 6rem;
+  margin-top: 5vh;
+  margin-right: 10%;
 
   display: flex;
   justify-content: flex-end;
@@ -40,11 +67,11 @@ body {
   flex-direction: column;
   /* put our content on right corner of the site */
 
-  color: hsl(16.22, 65%, 10%);
+  color: hsl(16.22, 65%, 40%);
   font-family: "Allura", cursive;
   font-size: 2.5rem;
   font-weight: bold;
-  text-shadow: 2px 2px 10px hsl(16.22, 79.57%, 63.53%);
+  text-shadow: 2px 2px 10px darkgrey /*hsl(16.22, 85%, 80%)*/;
 }
 
 .link-wrapper {
@@ -61,4 +88,64 @@ body {
 
 .logo:hover {
   opacity: 1;
+}
+
+/*Change of the design for the print (that it will look better for printing*/
+/*Or change of the design with change of the size of screen*/
+
+@media print {
+  .microsite {
+    margin-left: 0;
+  }
+
+  .header {
+    text-shadow: none;
+    font-family: "Times New Roman", Times, serif;
+  }
+
+  .main {
+    font-family: "Times New Roman", Times, serif;
+  }
+
+  .main-background {
+    background-color: none;
+    box-shadow: none;
+    border-radius: none;
+  }
+
+  .footer {
+    text-shadow: none;
+  }
+
+  .logo {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .microsite {
+    margin-left: 5%;
+    margin-right: 2%;
+  }
+
+  .main {
+    margin-right: 1%;
+  }
+
+  .main-background {
+    background-color: hsla(16.22, 80%, 80%, 0.7);
+    box-shadow: none;
+    border-radius: 3rem;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .microsite {
+    margin-top: 15vh;
+  }
+
+  p {
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+  }
 }
